--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@tailwindcss/vite": "^4.1.11",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^24.0.10",
     "@vueuse/core": "^13.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
     "lucide-vue-next": "^0.525.0",
+    "markdown-it": "^14.1.0",
     "pinia": "^3.0.3",
     "reka-ui": "^2.3.2",
     "tailwind-merge": "^3.3.1",
