--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@olets/markdown-it-wrapperless-fence-rule": "^1.2.1",
+    "@shikijs/core": "^3.7.0",
+    "@shikijs/langs": "^3.7.0",
+    "@shikijs/themes": "^3.7.0",
+    "@shikijs/transformers": "^3.7.0",
+    "@shikijs/types": "^3.7.0",
     "@tailwindcss/vite": "^4.1.11",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
@@ -21,17 +27,23 @@
     "gsap": "^3.13.0",
     "lucide-vue-next": "^0.525.0",
     "markdown-it": "^14.1.0",
+    "markdown-it-async": "^2.2.0",
     "pinia": "^3.0.3",
     "reka-ui": "^2.3.2",
+    "shiki": "^3.7.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.5",
+    "vaul-vue": "^0.4.1",
     "vue": "^3.5.13",
     "vue-i18n": "11",
     "vue-router": "4",
     "vue-sonner": "^2.0.1"
   },
   "devDependencies": {
+    "@iconify-json/radix-icons": "^1.2.2",
+    "@iconify/vue": "^5.0.0",
+    "@shikijs/markdown-it": "^3.7.0",
     "@tauri-apps/cli": "^2",
     "@vitejs/plugin-vue": "^5.2.1",
     "typescript": "~5.6.2",
